feat: add <address> api
